# pidgin-authinfo

./: .gitignore  Makefile.am  README.org  configure.ac
src/: authinfo.c
